# xscanner-studio

./: .dockerignore  .env.ci  .env.example  .env.preprod.example  .jscpd.json  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.preprod.yml  env.template.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker-release.yml
config/order/: ORDER_EXTRACTION_AI_CONTRACT.md  document_config.json
config/order/prompts/: order_extraction_cloud.md  order_extraction_cloud_vision_to_marker_text.md
config/whitelists/: buyer_name_kv_keys.json  currencies.json  forms.json  metals.json  producers.json  serial_number_patterns.json  weight_units.json
docker-entrypoint.d/: 99-env.sh
docs/: PRE_COMMIT_SETUP.md  RELEASING.md
docs/domains/: EXTRACTION.md  ORDER.md
docs/studio/: ADR-0001-frontend-server-persistence-boundary.md  API_CONTRACT_BACKLOG_VARIANT_B.md  CONTRACT_TEST_CHECKLIST_VARIANT_B.md  DESIGN_SYSTEM.md  DOCS_CONVENTIONS.md  I18N.md  LOGGING.md  MIGRATION_VARIANT_B_SERVER_OWNS_PERSISTENCE.md  PRE_COMMIT.md  README.md  SERVER_API_IMPLEMENTATION_ORDER_VARIANT_B.md  SERVER_REPO_PLAYBOOK_VARIANT_B.md  SERVICE_ARCHITECTURE.md  TESTING.md  UI_ARCHITECTURE.md
docs/studio/openapi/: auth-v1.yaml
public/: env.js
scripts/: check-db-calls-in-repositories.mjs  check-no-direct-supabase.mjs  help-check.mjs  help-i18n.mjs  help-test.mjs  record_order_ai_mock.py
scripts/db/: check-db-types.mjs  check_db_types.py  gen-db-types.mjs  gen_db_types.py  help.mjs  schema-hash.mjs  schema_hash.py
scripts/i18n/: check-i18n.mjs  help.mjs  helpers.mjs
scripts/preprod/: check.sh  common.sh  database-start.sh  database-stop.sh  deploy.sh  down.sh  health.sh  logs.sh  status.sh  up.sh  update-main.sh  verify-ci-main.sh  verify-ci-sha.sh
scripts/release/: create-release.sh  sync-release-notes.sh
scripts/test/: _order_mocks_recorder.py  record_order_extract_mock.py  record_order_mocks.py  record_order_strategy_mock.py  record_order_vision_mock.py
scripts/windows/: README.md  start-all.bat  start-server.bat  start-supabase.bat
scripts/windows/development/: start-all.bat  start-server.bat
scripts/windows/preprod/: check.bat  common.bat  database-start.bat  database-stop.bat  deploy.bat  down.bat  health.bat  logs.bat  status.bat  up.bat  update-main.bat  verify-ci-main.bat  verify-ci-sha.bat
src/: App.tsx
src/components/: ErrorPage.tsx  Footer.tsx  Header.tsx  LanguageSwitcher.tsx  Layout.tsx  LoginDialog.tsx  SystemStatusBadge.tsx  ThemeSwitcher.tsx
src/components/extractions/: BilRegistrationPanel.tsx  ConfidenceBadge.tsx  ExtractionFieldsEditor.tsx  ExtractionHistoryTable.tsx  ExtractionMeta.tsx  UploadAndExtractPanel.tsx
src/components/images/: useImageInspector.ts
src/components/layout/: PageHeader.tsx  TopNavigation.tsx
src/components/messages/: InfoPanel.tsx  MessageCenter.tsx
src/components/orders/: OrderCanonicalFieldsView.tsx  OrderDetailView.tsx  OrderDocumentTypeBadge.tsx  OrderHistoryTable.tsx  OrderItemHistoryTable.tsx  OrderItemModal.tsx  OrderItemsEditor.tsx  RawSignalsTable.tsx  TraceTreeView.tsx  orderKpis.ts  (+6 more)
src/lib/: i18n.ts  runtimeEnv.ts
src/pages/: DashboardPage.tsx  ExtractionDetailPage.tsx  ExtractionsPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  SettingsPage.tsx
src/services/: index.ts
studio/: .env.example  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
studio/scripts/: check-i18n.mjs  help-check.mjs  help.mjs
studio/src/: App.tsx  global.d.ts  index.css
supabase/: config.toml
supabase/migrations/: 2026011800000_initial_schema.sql  20260118091714_storage_bucket.sql  20260119091500_bil_registration.sql  20260126090000_inbound_orders.sql
tests/: conftest.py  test_supabase_rest.py
tests/e2e/: conftest.py  login.spec.ts  smoke.spec.ts  test_chatgpt_e2e.py  test_order_strategies_live_e2e.py  test_server_persistence_e2e.py  test_strategies_e2e.py
tests/integration/: AuthApiAdapter.test.ts  ServiceReadAdapters.test.ts  __init__.py  test_helpers.py  test_order_integration.py  test_server_integration.py  test_strategies.py  test_strategy_service.py  xScanner.test.ts
tests/unit/: AuthService.test.ts  HttpAuthRepository.test.ts  HttpBilReadService.test.ts  HttpExtractionMutationService.test.ts  HttpExtractionReadService.test.ts  HttpOrderReadService.test.ts  HttpXScannerClient.test.ts  ServiceFactory.test.ts  httpClient.test.ts  test_basic.py  test_marker_text_doc_id.py  test_marker_text_vision_multiline_parsing.py  test_order_ai_runner.py  test_order_ai_runner_recorded_usage.py  test_order_cloud_strategy_fallback.py  test_order_confidence_ai_signals.py  test_order_default_parser.py  test_order_document_detection_from_raw.py  test_order_document_identifier_whitelist.py  test_order_enrichment.py  test_order_extract_prompt.py  test_order_finalize_parties.py  test_order_item_inference.py  test_order_llm_calls_aggregate.py  test_order_llm_cost_meta.py  test_order_llm_usage_meta.py  test_order_marker_text_contract.py  test_order_marker_text_header_buyer.py  test_order_marker_text_header_doc_meta.py  test_order_marker_text_header_seller.py  test_order_persist_failed_invalid_document.py  test_order_persistence.py  test_order_postprocessing_fillins.py  test_order_postprocessing_normalization.py  test_order_provider_serial_number_policy.py  test_order_raw_data.py  test_order_trace_artifact_refs.py  test_order_trace_step_ordering.py  test_order_trace_summary.py  test_order_upload_quota_error_mapping.py  (+5 more)
tests/utils/: env.py
tools/cli/: __init__.py  __main__.py  cli.py  comparator.py  discovery.py  execution_manager.py  json_to_csv.py  renderers.py  report.py  report_models.py  result_formatter.py  runner.py  synonyms.py  template.py  test.py  validator.py
(+181 files in other folders)
